--- a/portfolio.html
+++ b/portfolio.html
@@ -314,21 +314,21 @@
             <ul class="adress-list list">
               <li class="adress-item">
                 <a
-                  class="footer-link link"
+                  class="adress-link link"
                   href="https://goo.gl/maps/Kvwpq43CmkSHpZen7"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
               <li class="adress-item">
                 <a
-                  class="footer-link footer-contact link"
+                  class="footer-contact link"
                   href="mailto:info@example.com"
                   >info@example.com</a
                 >
               </li>
               <li class="adress-item">
                 <a
-                  class="footer-link footer-contact link"
+                  class="footer-contact link"
                   href="tel:+380991111111"
                   >+38 099 111 11 11</a
                 >
@@ -394,8 +394,8 @@
         <div class="footer-form-wrap">
           <p class="footer-form-title">Подпишитесь на рассылку</p>
           <form class="footer-form">
-            <input type="email" name="email" id="mail" placeholder="E-mail" class="footer-input">
-            <button type="button" class="footer-buttom">Подписаться
+            <input type="email" name="email" id="mail" placeholder="E-mail" class="footer-input" required>
+            <button type="submit" class="footer-buttom">Подписаться
                  <svg
                   class="icon-send"
                   width="24"
